<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:background="#fff"
        android:contentDescription="@string/info_button"
        android:padding="@dimen/smPadding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_info_blue_24dp" />

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="@dimen/alpha"
        android:contentDescription="@string/result_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/trueButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_check_black_24dp"
                android:drawablePadding="@dimen/drawablePadding"
                android:padding="@dimen/buttonPadding"
                android:text="@string/true_button"
                android:textColor="#4CAF50"
                android:textColorHighlight="#009688"
                android:textColorLink="#009688" />

            <Button
                android:id="@+id/falseButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_close_black_24dp"
                android:drawablePadding="@dimen/drawablePadding"
                android:padding="@dimen/buttonPadding"
                android:text="@string/false_button"
                android:textColor="#F44336"
                android:textColorHighlight="#FF5722"
                android:textColorLink="#FF5722" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/prevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prev_button"
                app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next_button"
                app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
        </LinearLayout>

        <Button
            android:id="@+id/cheatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button" />

        <TextView
            android:id="@+id/cheatText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cheat_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>